# Niva_dashboard_rpi

./: .gitignore  BUTTON_BACKLIGHT_DESIGN.md  CLAUDE.md  DISPLAY_POWER_CONTROL.md  OSCILLOSCOPE_DESIGN.md  PERFORMANCE_ANALYSIS.md  PROJECT_CONTEXT.md  shared_reference_example.rs  test_adc.py
niva_dashboard/: Cargo.toml  build.rs  install-service.sh  run.sh
niva_dashboard/src/: main.rs  test.rs
niva_dashboard/src/alerts/: alert.rs  alert_manager.rs  mod.rs  watchdog.rs  watchdogs.rs
niva_dashboard/src/gauge_builders/: mod.rs  speedometer_gauge.rs  temperature_gauge.rs
niva_dashboard/src/graphics/: colors.rs  context.rs  default_style.json  gauge.rs  mod.rs  opengl_test.rs  sdl2_gauges.rs  text_box.rs  ui_style.rs  ui_style_tests.rs
niva_dashboard/src/hardware/: analog_signal_processing.rs  digital_signal_processing.rs  gpio_input.rs  hw_providers.rs  mod.rs  sensor_manager.rs  sensor_value.rs  sensors.rs
niva_dashboard/src/indicator_builders/: mod.rs
niva_dashboard/src/indicator_builders/bar_builders/: fuel_level_bar.rs  mod.rs  oil_pressure_bar.rs  (+2 more)
niva_dashboard/src/indicators/: decorator.rs  digital_segmented_indicator.rs  gauge_indicator.rs  indicator.rs  mod.rs  needle_indicator.rs  text_indicator.rs  vertical_bar_indicator.rs
niva_dashboard/src/page_framework/: diag_page.rs  events.rs  input.rs  main_page.rs  mod.rs  osc_page.rs  page_manager.rs  terminal_page.rs
niva_dashboard/src/test/: run_test.rs
niva_dashboard/src/util/: adc_data_provider.rs  adc_serial_reader.rs  diagnostics.rs  logging.rs  mod.rs  shutdown.rs  ups_monitor.rs
(+12 files in other folders)
